Update Russian translations

--- a/locale/ru/aai-zones.cfg
+++ b/locale/ru/aai-zones.cfg
@@ -1,7 +1,7 @@
 ﻿text-zone-planner=Выберите тип зоны
 text-zone-planner-colour=Цвет:
 text-zone-planner-pattern=Шаблон:
-text-zone-planner-alt=Shift-выделение для удаления
+text-zone-planner-alt=Shift-перетаскивание для удаления
 
 zone-name=Зона __1__ __2__
 
@@ -43,7 +43,7 @@ zone-planner=Планировщик зоны
 zone-planner=Планировщик зоны
 
 [item-description]
-zone-planner=Позволяет размещать и удалять зоны, которые используются для разметки областей или управления программируемой техникой. Shift-выделение для удаления зон с местности.
+zone-planner=Позволяет размещать и удалять зоны, которые используются для разметки областей или управления программируемой техникой. Shift-перетаскивание для удаления зон с местности.
 
 [item-group-name]
 zones=Зоны
