--- a/locale/ru/aai-industry.cfg
+++ b/locale/ru/aai-industry.cfg
@@ -123,12 +123,16 @@ sand-processing=Дробление, измельчение и фильтраци
 glass-processing=Переплавка песка в стекло.
 industrial-furnace=Больше, быстрее и с большим количеством ячеек для модулей, чем электрическая печь. Требуется выбрать рецепт для работы, зато может работать с продвинутыми рецептами с несколькими ингредиентами и жидкостями.
 area-electric-mining-drill=Электрический бур с увеличенной площадью охвата и дополнительным слотом для модуля.
+fast-inserter=Манипуляторы, двигающиеся быстрее.
+filter-inserter=Манипуляторы, умеющие выбирать нужные предметы благодаря улучшенной электронике.
+stack-filter-inserter=Пакетные манипуляторы, умеющие выбирать нужные предметы благодаря улучшенной электронике.
+medium-electric-pole=Больше вариантов проведения электричества.
 
 [mod-setting-name]
 crash-sequence=Начать с кораблекрушения
 quick-start-science=Научные пакеты на старте
 aai-fuel-processor=Переработка топлива
-aai-fuel-processor-efficiencyy=Эффективность переработки топлива
+aai-fuel-processor-efficiency=Эффективность переработки топлива
 aai-fast-motor-crafting=Быстрая сборка моторов
 aai-wide-drill=Бур большого охвата
 aai-burner-turbine-efficiency=Эффективность твердотопливной турбины
