Updated English templates

--- a/locale/en (template)/aai-programmable-structures.cfg
+++ b/locale/en (template)/aai-programmable-structures.cfg
@@ -119,6 +119,10 @@ programmable-structures=Scan tiles to detect resources, enemies, and structures.
 
 [mod-setting-name]
 aai-max-structs-per-tick=AAI Max structures per tick
+aai-structs-tick_limit=AAI Default tick rate
+aai-structs-output_pulse=AAI Default pulse output
 
 [mod-setting-description]
 aai-max-structs-per-tick=Improve UPS by restricting how many structures can be processed each frame. Higher values means more potential UPS strain, 0 means unlimited. If choosing 0 then it may be worth limiting structures in other ways, such as by cutting power to structures when they are not needed, or sending signals in pulses instead of constantly.
+aai-structs-tick_limit=AAI Default tick rate for newly placed structures
+aai-structs-output_pulse=AAI Default pulse output setting for newly placed structures
