--- a/locale/en (template)/aai-programmable-vehicles.cfg
+++ b/locale/en (template)/aai-programmable-vehicles.cfg
@@ -2,6 +2,7 @@ vehicle-signal=__1__ ID
 inventory-transferred=Inventory Transferred
 split-vehicle=AI __1__
 split-vehicle-with=AI __1__ with __2__
+remove-ai=Remove AI from __1__
 construction_denied_by_enemy=Construct interrupted by burrowed enemy forces.
 cant-mine-vehicle-with-passenger=This cannot be mined while anyone is in it or the AI is switched on.
 
@@ -42,6 +43,7 @@ allow_pathing_label=Pathfinding:
 pathfind-auto=Auto (switch after a collision)
 pathfind-always=Always
 pathfind-never=Never
+add_path=Add Path
 save_changes=Save Changes
 list_paths=List Paths
 path_clear=Clear all waypoints from path.
@@ -139,7 +141,7 @@ tank-flamethrower-3=Flamethrower
 vehicle-depot=Rapidly transfer items to and from nearby vehicles based on signal input. Set a positive item signal to accept that item from vehicles. Set a negative signal to supply that item to vehicles.
 unit-remote-control=Select vehicles with normal drag. Send a pathfinding command with shift-click (uses biter ai so can be a bit derpy). Shift-click distributes commands over the selected area, larger areas mean less units bumping in to each other. If vehicles are given a new command by a Unit Control Tower after your command then your command will be overriden.
 path-remote-control=Create and edit paths with waypoints for vehicles. Can be crafted or created by pressing the 'Create / Toggle Remote' key (defaults to Y).
-cannon-shell-precision=Like the Cannon Shell but targets single target instead of a line for reduced collateral damage. Can be crafted or created by pressing the 'Create / Toggle Remote' key (defaults to Y).
+cannon-shell-precision=Like the Cannon Shell but targets single target instead of a line for reduced collateral damage.
 explosive-cannon-shell-precision=Like the Explosive Cannon Shell but targets single target instead of a line for reduced collateral damage.
 vehicle-deployer=Deploys a car-type vehicle. Any connected signal data is saved to the vehicle as it is deployed otherwise vehicle defaults are used. Vehicle Signal data is used for the vehicle's item target quantities so that Hauler vehicles can exchange inventory if in range (inventory over that value will be pushed to a hauler if it will accept it). Signal data on Haulers defines their maximum capacity instead of target amount.
 unit-scan=Input Vehicle ID or Player ID (Virtual Signals Tab), selects the nth entity of that type in order of placement or use a negative value to select in reverse order (most recent first). Outputs 'count' of entities of that type and details of the selected entity including position, health, inventory, and internal timers.
@@ -149,6 +151,9 @@ position-beacon=A static beacon (combinator) that outputs it's ID and position. 
 chip=Chip
 active-state-on=On
 active-state-off=Off
+active-state-auto=Auto
+signal-position-beacon-id=Position beacon ID
+signal-vehicle-depot-id=Vehicle depot ID
 
 [technology-name]
 engine=High performance engine
@@ -174,8 +179,9 @@ start-with-random-color=Players start with a random color
 pathfinding-visualisation-cutoff=Pathfinding Visualisation Cutoff
 hand-deploy-vehicle-ai-default=Hand-Deployed Vehicles: AI Default Setting
 exclude-vehicles=Exclude Vehicles
-restrict-remote-actions-to-player-ids=Restrict remote actions to player ids.
-passenger-no-control-alert=Show AI passenger no-control alert.
+restrict-remote-actions-to-player-ids=Restrict remote actions to player ids
+passenger-no-control-alert=Show AI passenger no-control alert
+aai-remove-ai-on-mine=Remove AI by mining vehicles
 
 [mod-setting-description]
 start-with-unit-remote-control=Start with a free Unit Remote Controller
@@ -185,6 +191,7 @@ hand-deploy-vehicle-ai-default=Which AI setting should vehicles default to when 
 exclude-vehicles=Non-programmable vehicles. Enter the "entity-name" of vehicles to exclude, separate multiple by 1 space.
 restrict-remote-actions-to-player-ids=If set, only the specified player ids can use the unit and path remote actions, separate multiple by 1 space.
 passenger-no-control-alert=Allows you to disable the "To take manual control of the vehicle switch AI state to: Auto or OFF." message.
+aai-remove-ai-on-mine=The recipe to convert an AI vehicle to a non AI vehicle is removed to convert crafting menu clutter. Instead you get the non-AI version of the vehicle back by mining it.
 
 [string-mod-setting]
 hand-deploy-vehicle-ai-default-On=On: AI Drives
