--- a/locale/en (template)/aai-industry.cfg
+++ b/locale/en (template)/aai-industry.cfg
@@ -27,7 +27,7 @@ area-electric-mining-drill=Area mining drill
 [item-description]
 burner-turbine=Standalone power generation, simple but inefficient.
 processed-fuel=An efficient fuel designed to power vehicles but can be used for other things.
-area-electric-mining-drill=An electic mining drill with increased range and an exrta module slot.
+area-electric-mining-drill=An electic mining drill with increased range and an extra module slot.
 
 [recipe-name]
 oil-processing-heavy=Crude oil processing
@@ -67,7 +67,7 @@ aai-small-ship-wreck=Some resources can be Salvaged.
 fuel-processor=Process any chemical fuels into processed fuel. Gains __1__% energy value and has good vehicle acceleration.
 steel-wall=Spiked walls that deal damage back to the attacker.
 industrial-furnace=Bigger, faster and with more module slots than an electric furnace. Needs the recipe to be selected, but can handle more advanced recipes with multiple inputs and fluids.
-area-electric-mining-drill=An electic mining drill with increased range and an exrta module slot.
+area-electric-mining-drill=An electric mining drill with increased range and an exrta module slot.
 offshore-pump=Pumps fluid from a body of water.\n[font=default-bold][color=#f5cb48]Consumes electricity[/color][/font]\n[font=default-bold][color=#e4cead]Max consumption:[/color][/font] 50.0 kW
 powered-offshore-pump=Pumps fluid from a body of water.[font=default-bold][color=#f5cb48]Consumes electricity[/color][/font]\n[font=default-bold][color=#e4cead]Max consumption:[/color][/font] 50.0 kW
 offshore-pump-output=Pumps fluid from a body of water.[font=default-bold][color=#f5cb48]Consumes electricity[/color][/font]\n[font=default-bold][color=#e4cead]Max consumption:[/color][/font] 50.0 kW
@@ -123,12 +123,16 @@ sand-processing=Crushing, grinding, and filtering raw material into clean sand.
 glass-processing=Melting sand into glass.
 industrial-furnace=Bigger, faster and with more module slots than an electric furnace. Unlike most other furnaces the recipe needs to be selected (allows it to handle fluids).
 area-electric-mining-drill=An electic mining drill with increased range and an exrta module slot.
+fast-inserter=Inserters capable of faster motion.
+filter-inserter=Inserters capable of item filtering through improved electronics.
+stack-filter-inserter=Steack inserters capable of item filtering through improved electronics.
+medium-electric-pole=More flexible ways to distribute electricity.
 
 [mod-setting-name]
 crash-sequence=Starting crash sequence
 quick-start-science=Quick start science
 aai-fuel-processor=Fuel processing
-aai-fuel-processor-efficiencyy=Fuel processing efficiency
+aai-fuel-processor-efficiency=Fuel processing efficiency
 aai-fast-motor-crafting=Fast motor crafting
 aai-wide-drill=Wide area drill
 aai-burner-turbine-efficiency=Burner turbine efficiency
@@ -139,5 +143,5 @@ quick-start-science=The number of automation science packs you start with. (Requ
 aai-fast-motor-crafting=Makes motors craft from iron plate in the same time as iron gears in vanilla. Iron gear 0.2s, Motor 0.3s, Copper cable 0.2s, Electric motor 0.4s.
 aai-wide-drill=Adds the wide area electric mining drill to the game.
 aai-burner-turbine-efficiency=Changes the fuel efficiency of the burner turbine generator.
-aai-fuel-processor=Adds a fuel processor to convent chemical fuels to a versatile processed fuel and gain 10% energy in the process.
-aai-fuel-processor-efficiencyy=The percentge of bonus energy you get from the process. Higher values decrease the energy use of the fuel processor.
+aai-fuel-processor=Adds a fuel processor to convent chemical fuels to a versatile processed fuel and gain energy in the process (energy gain % is a different setting).
+aai-fuel-processor-efficiency=The percentge of bonus energy you get from the process. Higher values decrease the energy use of the fuel processor.
